# linalg

./: CMakeLists.txt  ChangeLog  Config.cmake.in  README.md  TODO  build.sh  env.sh
cmake/: Findcblas.cmake
docs/: index.rst
example/: CMakeLists.txt  build.sh  check.cc  smat.cc
include/: comm.hh  context.hh  event.hh  linalg.hh  linalg.hh.in  linalg_config.hh.in  linalg_cuda.hh  linalg_nccl.hh  matrix.hh  operations.hh  tile.hh
performance/: format.py  gemm.sh  smat.sh
src/: comm.cc  context.cc  linalg.cc  matrix.cc  operations.cc  operations_cuda.cu  set_cuda.cu  tile.cc
tests/: CMakeLists.txt  allreduce.cc  checkblas.cc  checkblas_device.cc  checklinalg.cc  copy.cc  gemm.cc  gemmV.cc  matrix.cc  mk_test.py  testing.hh
